--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
         app:layout_constraintVertical_bias="0.105" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/button_youtube"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Youtube Notification"
